--- a/beta-v/package.json
+++ b/beta-v/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.9.5",
+    "recharts": "^3.4.1",
     "sweetalert2": "^11.26.3",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.16"
